<resources>
    <string name="app_name">exampleimg-pdf</string>
    <string name="todo">TODO</string>
    <string name="signup">signup</string>
    <string name="add">add</string>
    <string name="NAME">name</string>
    <string name="password">Password:</string>
    <string name="name">name</string>
    <string name="Name">Name:</string>
    <string name="login">LOGIN</string>
    <string name="textview">TextView</string>
</resources>