<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/sample"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/nametext"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:text="@string/Name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/nameedtext"
                android:layout_width="251dp"
                android:layout_height="38dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/name"
                android:inputType=""
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:id="@+id/passtext"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/passedtext"
            android:layout_width="251dp"
            android:layout_height="38dp"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType=""
            android:textColor="@color/white"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Addbtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/add"
            android:shadowColor="@color/white"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/signupbtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:text="@string/signup"
            android:textColor="@color/white" />
    </LinearLayout>

    </LinearLayout>
